[tool.poetry]
name = "tricycle"
version = "0.1.0"
description = "A (very) minimal deep learning framework"
authors = ["benedictclarkson1 <benedictclarkson1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pytest = "^7.4.3"
flake8 = "^6.1.0"
coverage = "^7.3.2"
scikit-learn = "^1.3.2"
pyright = "^1.1.345"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.13.0"
matplotlib = "^3.8.2"
pydot = "^2.0.0"
graphviz = "^0.20.1"
networkx = "^3.2.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
