[tool.poetry]
name = "tricycle"
version = "0.1.0"
description = "A (very) minimal deep learning framework"
authors = ["benedictclarkson1 <benedictclarkson1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
tqdm = "^4.66.2"
httpx = "^0.27.0"
mlflow = "^2.11.3"
psutil = "^5.9.8"
memray = "^1.11.0"
ray = {extras = ["train"], version = "^2.10.0"}
omegaconf = "^2.3.0"
pynvml = "^11.5.0"
humanize = "^4.9.0"

[tool.poetry.group.test.dependencies]
scikit-learn = "^1.3.2"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.2"
coverage = "^7.3.2"
pytest = "^7.4.3"
torch = "^2.2.1"
hypothesis = "^6.100.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pyright = "^1.1.345"
black = "^23.11.0"
isort = "^5.13.0"
matplotlib = "^3.8.2"
pydot = "^2.0.0"
graphviz = "^0.20.1"
networkx = "^3.2.1"
py-spy = "^0.3.14"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
