[project]
name = "tricycle"
version = "0.1.0"
description = "A Deep Learning library you can actually understand"
authors = [
    { name = "benedictclarkson1", email = "benedictclarkson1@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
