[metadata]
name = tricycle
version = 0.1.0
description = "A Deep Learning library you can actually understand"
author = benedictclarkson1
author_email = benedictclarkson1@gmail.com
license = MIT
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
